commit unfinished identity changes (no redirection to register)

--- a/ASI.Basecode.WebApp/ASI.Basecode.WebApp.csproj
+++ b/ASI.Basecode.WebApp/ASI.Basecode.WebApp.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <ProjectReference Include="..\ASI.Basecode.Data\ASI.Basecode.Data.csproj" />
     <ProjectReference Include="..\ASI.Basecode.Resources\ASI.Basecode.Resources.csproj" />
     <ProjectReference Include="..\ASI.Basecode.Services\ASI.Basecode.Services.csproj" />
   </ItemGroup>
