--- a/ASI.Basecode.WebApp/ASI.Basecode.WebApp.csproj
+++ b/ASI.Basecode.WebApp/ASI.Basecode.WebApp.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="LinqKit" Version="1.2.2" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
