--- a/ASI.Basecode.WebApp/appsettings.json
+++ b/ASI.Basecode.WebApp/appsettings.json
@@ -1,26 +1,34 @@
 {
+  "BaseCode": {
+    "AuthSecretKey": "Vg5KKsgqpKVnYMNLJRzYGMuvOyIoQEgFvBPtkT1Aj7A=",
+    "Issuer": "http://localhost:52897",
+    "Audience": "http://localhost:52897",
+    "ExpirationMinutes": 60,
+    "TokenPath": "/api/token"
+
+  },
   "Common": {
-    "SetupRoot": "C:\\setup\\projects\\ASI.Basecode\\root",
-    "LogFileSize": "5000000" // Around 5MB
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BaseCodeDB; Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore": "Debug",
-      "Hangfire": "Information"
+      "SetupRoot": "C:\\setup\\projects\\ASI.Basecode\\root",
+      "LogFileSize": "5000000" // Around 5MB
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BaseCodeDB; Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.EntityFrameworkCore": "Debug",
+        "Hangfire": "Information"
+      }
+    },
+    "TokenAuthentication": {
+      "SecretKey": "AsiBasecode_keySecret@$13376934212",
+      "Audience": "AsiBasecodAudience",
+      "TokenPath": "/api/token",
+      "CookieName": "tkn",
+      "ExpirationMinutes": "120"
     }
-  },
-  "TokenAuthentication": {
-    "SecretKey": "AsiBasecode_keySecret@$13376934212",
-    "Audience": "AsiBasecodAudience",
-    "TokenPath": "/api/token",
-    "CookieName": "tkn",
-    "ExpirationMinutes": "120"
-  },
-}
+  }
