--- a/ASI.Basecode.Data/ASI.Basecode.Data.csproj
+++ b/ASI.Basecode.Data/ASI.Basecode.Data.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="EFCore.BulkExtensions" Version="7.1.6" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
