fixed skooby dependency error

--- a/Skooby.WebApp/Skooby.WebApp.csproj
+++ b/Skooby.WebApp/Skooby.WebApp.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASI.Basecode.Data\ASI.Basecode.Data.csproj" />
+    <ProjectReference Include="..\ASI.Basecode.Resources\ASI.Basecode.Resources.csproj" />
+    <ProjectReference Include="..\ASI.Basecode.Services\ASI.Basecode.Services.csproj" />
+    <ProjectReference Include="..\ASI.Basecode.WebApp\ASI.Basecode.WebApp.csproj" />
+  </ItemGroup>
+
 </Project>
