--- a/Skooby.WebApp/appsettings.json
+++ b/Skooby.WebApp/appsettings.json
@@ -1,9 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "BaseCode": {
+        "AuthSecretKey": "Vg5KKsgqpKVnYMNLJRzYGMuvOyIoQEgFvBPtkT1Aj7A=",
+        "Issuer": "http://localhost:52897",
+        "Audience": "http://localhost:52897",
+        "ExpirationMinutes": 60,
+        "TokenPath": "/api/token"
+    },
+    "Common": {
+        "SetupRoot": "C:\\setup\\projects\\ASI.Basecode\\root",
+        "LogFileSize": "5000000"
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=skoobydb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Warning",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.EntityFrameworkCore": "Debug",
+            "Hangfire": "Information"
+        }
+    },
+    "TokenAuthentication": {
+        "SecretKey": "AsiBasecode_keySecret@$13376934212",
+        "Audience": "AsiBasecodAudience",
+        "TokenPath": "/api/token",
+        "CookieName": "tkn",
+        "ExpirationMinutes": "120"
     }
-  },
-  "AllowedHosts": "*"
 }
