--- a/Skooby.WebApp/appsettings.json
+++ b/Skooby.WebApp/appsettings.json
@@ -11,7 +11,7 @@
     "LogFileSize": "5000000"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=Alliance;User Id=sa;Password=iGarfield12345;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=dbdbdbdb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
