--- a/Skooby.WebApp/appsettings.json
+++ b/Skooby.WebApp/appsettings.json
@@ -10,9 +10,9 @@
         "SetupRoot": "logs",
         "LogFileSize": "5000000"
     },
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=testskoob;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Siarotskie;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
